re PR fortran/15975 ([4.0 only] ICE in trans-array.c    pointer array initialization stuff)

2005-09-18  Erik Edelmann  <erik.edelmann@iki.fi>

	PR fortran/15975
	* resolve.c (resolve_symbol): Don't assign default
	initializer to pointers.

2005-09-18  Erik Edelmann  <erik.edelmann@iki.fi>

	PR fortran/15975
	* gfortran.dg/der_pointer_2.f90: New test.

From-SVN: r104389